# calgen

./: README.md  build_stlite.py  calgen.py  calgen_simple.py  ical_writer.py  pyproject.toml  requirements.in  requirements.txt  special_dates.csv
docs/: index.html
