[project]
name = "calgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "calendar-view>=2.4.8",
    "icalendar>=6.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "recurring-ical-events>=3.3.4",
    "setuptools>=75.6.0",
    "streamlit>=1.41.1",
    "tabulate>=0.9.0",
]
